--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,3 +2,7 @@
 
 $font-title: 'Great Vibes', 'La Belle Aurore', serif;
 $font-nav:  'Poiret One', 'Corbel', sans-serif;
+
+
+$black: rgba(0, 0, 0, 0.85);
+$white: rgba(255, 255, 255, 1);
