--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 /* Global Styles */
 header {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.85);
   color: white;
   font-family: "Great Vibes", "La Belle Aurore", serif;
   font-size: 4em;
@@ -67,7 +67,7 @@ header {
 }
 
 nav {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.85);
   text-align: center;
   width: 100%;
 }
@@ -76,11 +76,36 @@ nav a {
   display: inline-block;
   font-family: "Poiret One", "Corbel", sans-serif;
   font-weight: bold;
-  letter-spacing: 2px;
-  padding: 14px 26px;
+  letter-spacing: 0.2em;
+  padding: 0.9em 1em;
   text-decoration: none;
   text-transform: uppercase;
+  -moz-transition: ease-in-out 0.5s;
+  -o-transition: ease-in-out 0.5s;
+  -webkit-transition: ease-in-out 0.5s;
+  transition: ease-in-out 0.5s;
+}
+nav a:hover {
+  letter-spacing: 0.3em;
 }
 nav li {
   display: inline;
+}
+
+/* Special CSS */
+#flowers {
+  text-align: center;
+}
+#flowers .fl {
+  display: inline-block;
+  list-style: none;
+  margin: 1em 0;
+}
+#flowers .fl a {
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+#flowers .fl img {
+  width: 60%;
 }
