--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,13 +1,22 @@
 /* Global Styles */
+html, body {
+  background-color: rbga(0, 0, 0, 1);
+}
 
 header {
-  background-color: $black;
-  color: rgba(255, 255, 255, 1);
-  font-family: $font-title;
-  font-size: 4em;
+  color: rgba(0, 0, 0, 0.9);
   margin: 0.3em;
-  padding: 0.8em 0.2em 0.6em 0.5em;
-  width: 30%;
+  padding: 1em 0.2em 0.4em 0.5em;
+  width: 50%;
+  h1 {
+    font-family: $font-title;
+    font-size: 3.8em;
+  } 
+  p {
+    font-family: $font-subtitle;
+    font-size: 1em;
+    margin: 0 4em;
+  }
 }
 
 nav {
@@ -19,7 +28,8 @@ nav {
     color: $white;
     display: inline-block;
     font-family: $font-nav;
-    font-weight: bold;
+    font-size: 0.8em;
+    font-weight: 600;
     letter-spacing: 0.2em;
     padding: 0.9em 1em;
     text-decoration: none;
@@ -34,7 +44,20 @@ nav {
   }
 }
 
+section {
+  color: $black;
+  font-family: $font-body;
+  line-height: 1.4em;
+  text-align: center;
+}
+
 /* Special CSS */
+.container {
+  margin: 2em auto;
+  text-align: justify;
+  width: 75%;
+}
+
 #flowers {
   text-align: center;
   .fl {
@@ -53,3 +76,8 @@ nav {
     }
   }
 }
+
+.promo {
+  border: 5px double $black;
+  padding: 2.7em 3em;
+} 
