--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans);
 
 $font-title: 'Great Vibes', 'La Belle Aurore', serif;
+$font-subtitle: 'Josefin Slab', serif;
 $font-nav:  'Poiret One', 'Corbel', sans-serif;
+$font-body: 'Josefin Sans', 'Corbel', sans-serif;
 
-
-$black: rgba(0, 0, 0, 0.85);
-$white: rgba(255, 255, 255, 1);
+$black: rgba(0, 0, 0, 0.8);
+$white: rgba(255, 255, 255, 0.9);
