--- a/css/main.css
+++ b/css/main.css
@@ -123,15 +123,20 @@ section {
 #flowers .fl {
   display: inline-block;
   list-style: none;
-  margin: 1em 0;
+  margin: 1em 0.3em;
 }
-#flowers .fl a {
+#flowers .fl span {
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
   display: block;
+  padding: 0.4em 0;
   text-decoration: none;
   text-transform: uppercase;
 }
 #flowers .fl img {
-  width: 60%;
+  padding: 0 auto;
+  margin: 0 auto;
+  width: 12em;
 }
 
 .promo {
