--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -63,16 +63,21 @@ section {
   .fl {
     display: inline-block;
     list-style: none;
-    margin: 1em 0;
+    margin: 1em 0.3em;
 
-    a {
+    span {
+      background-color: rgba(0, 0, 0, 0.75);
+      color: white;
       display: block;
+      padding: 0.4em 0;
       text-decoration: none;
       text-transform: uppercase;
     }
 
     img {
-      width: 60%;
+      padding: 0 auto;
+      margin: 0 auto;
+      width: 12em;
     }
   }
 }
