Labels for flower grid

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans|Lato);
 
 $font-title: 'Great Vibes', 'La Belle Aurore', serif;
 $font-subtitle: 'Josefin Slab', serif;
 $font-nav:  'Poiret One', 'Corbel', sans-serif;
 $font-body: 'Josefin Sans', 'Corbel', sans-serif;
+$font-flower: 'Lato', 'Open Sans', sans-serif;
 
 $black: rgba(0, 0, 0, 0.8);
 $white: rgba(255, 255, 255, 0.9);
