--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans|Lato);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -129,7 +129,12 @@ section {
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
   display: block;
-  padding: 0.4em 0;
+  font-family: "Lato", "Open Sans", sans-serif;
+  font-size: 0.8em;
+  font-weight: 500;
+  letter-spacing: 0.08em;
+  margin: -0.5em 0;
+  padding: 0.6em 0;
   text-decoration: none;
   text-transform: uppercase;
 }
