--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -69,7 +69,12 @@ section {
       background-color: rgba(0, 0, 0, 0.75);
       color: white;
       display: block;
-      padding: 0.4em 0;
+      font-family: $font-flower;
+      font-size: 0.8em;
+      font-weight: 500;
+      letter-spacing: 0.08em;
+      margin: -0.5em 0;
+      padding: 0.6em 0;
       text-decoration: none;
       text-transform: uppercase;
     }
