Added banner image

--- a/css/main.css
+++ b/css/main.css
@@ -58,13 +58,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* Global Styles */
 html, body {
   background-color: rbga(0, 0, 0, 1);
+  overflow-x: hidden;
 }
 
 header {
   color: rgba(0, 0, 0, 0.9);
   margin: 0.3em;
   padding: 1em 0.2em 0.4em 0.5em;
-  width: 50%;
+  width: 80%;
 }
 header h1 {
   font-family: "Great Vibes", "La Belle Aurore", serif;
@@ -103,14 +104,29 @@ nav li {
   display: inline;
 }
 
-section {
+/* Special CSS */
+#banner {
+  background: url(../img/header.jpg) no-repeat 0 0;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  height: 25em;
+  position: fixed;
+}
+
+#promo {
+  background-color: rgba(255, 255, 255, 0.6);
+  border: 5px double rgba(0, 0, 0, 0.8);
   color: rgba(0, 0, 0, 0.8);
   font-family: "Josefin Sans", "Corbel", sans-serif;
   line-height: 1.4em;
+  padding: 4em 3em;
+  margin: 5em auto;
   text-align: center;
+  width: 40%;
 }
 
-/* Special CSS */
 .container {
   margin: 2em auto;
   text-align: justify;
@@ -142,9 +158,4 @@ section {
   padding: 0 auto;
   margin: 0 auto;
   width: 12em;
-}
-
-.promo {
-  border: 5px double rgba(0, 0, 0, 0.8);
-  padding: 2.7em 3em;
 }
