--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Droid+Serif|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans|Lato);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Monserrat|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans|Lato);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -157,6 +157,49 @@ nav li {
   width: 40%;
 }
 
+.color {
+  display: inline-block;
+  font-family: "Lato", "Open Sans", "Corbel", Helvetica, sans-serif;
+  /* palette */
+  /* palette colors */
+}
+.color p {
+  padding: 2em;
+}
+.color .palette {
+  float: left;
+  height: 5em;
+  width: 5em;
+  margin: 0.8em;
+}
+.color .red {
+  background: red;
+}
+.color .orange {
+  background: orange;
+}
+.color .yellow {
+  background: yellow;
+}
+.color .green {
+  background: green;
+}
+.color .blue {
+  background: blue;
+}
+.color .purple {
+  background: purple;
+}
+.color .black {
+  background: black;
+}
+.color .brown {
+  background: brown;
+}
+.color .white {
+  background: white;
+}
+
 .container {
   margin: 2em auto;
   text-align: justify;
@@ -175,7 +218,7 @@ nav li {
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
   display: block;
-  font-family: "Lato", "Open Sans", sans-serif;
+  font-family: "Montserrat", "Open Sans", sans-serif;
   font-size: 0.8em;
   font-weight: 500;
   letter-spacing: 0.08em;
