--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,4 +8,5 @@ $font-flower: 'Montserrat', 'Open Sans', sans-serif;
 $font-color: 'Lato', 'Open Sans', 'Corbel', Helvetica, sans-serif;
 
 $black: rgba(0, 0, 0, 0.8);
+$grey: rgba(0, 0, 0, 0.4);
 $white: rgba(255, 255, 255, 0.9);
