--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,7 @@ nav li {
   margin: 2em auto;
   text-align: justify;
   width: 75%;
+  overflow: hidden;
 }
 
 #intro {
@@ -237,11 +238,25 @@ nav li {
 }
 #flowers .fl {
   display: inline-block;
+  font-family: "Josefin Sans", "Corbel", sans-serif;
   list-style: none;
   margin: 1em 0.3em;
+  position: relative;
+}
+#flowers .fl div {
+  background-color: rgba(255, 255, 255, 0.8);
+  bottom: 1.1em;
+  display: none;
+  font-size: 0.95em;
+  left: 0;
+  max-width: 10.75em;
+  padding: 1em;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 #flowers .fl span {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
   display: block;
   font-family: "Montserrat", "Open Sans", sans-serif;
@@ -256,10 +271,5 @@ nav li {
 #flowers .fl img {
   padding: 0 auto;
   margin: 0 auto;
-  width: 12em;
-}
-#flowers .fl .toggle {
-  background-color: rgba(255, 255, 255, 0.7);
-  display: none;
   width: 12em;
 }
