--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,3 +10,4 @@ $font-color: 'Lato', 'Open Sans', 'Corbel', Helvetica, sans-serif;
 $black: rgba(0, 0, 0, 0.8);
 $grey: rgba(0, 0, 0, 0.4);
 $white: rgba(255, 255, 255, 0.9);
+$green: rgba(116, 113, 78, 1);
