--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,7 @@ nav li {
 
 #flowers {
   text-align: center;
+  /* .fl */
 }
 #flowers .fl {
   display: inline-block;
@@ -242,18 +243,49 @@ nav li {
   list-style: none;
   margin: 1em 0.3em;
   position: relative;
+  /* div */
+  /* span */
+  /* img */
 }
 #flowers .fl div {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.85);
   bottom: 1.1em;
   display: none;
-  font-size: 0.95em;
   left: 0;
+  line-height: 1.2em;
   max-width: 10.75em;
   padding: 1em;
   position: absolute;
   right: 0;
   top: 0;
+}
+#flowers .fl div a {
+  border: 0.1em solid rgba(0, 0, 0, 0.8);
+  background-color: white;
+  bottom: 1em;
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 0.7em;
+  letter-spacing: 0.07em;
+  left: 3.25em;
+  padding: 0.4em 0.55em;
+  position: absolute;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+#flowers .fl div a:hover {
+  border: 0.1em solid rgba(255, 255, 255, 0.9);
+  background-color: #74714e;
+  color: rgba(255, 255, 255, 0.9);
+}
+#flowers .fl div p {
+  font-size: 0.85em;
+  margin: 1em 0.2em;
+}
+#flowers .fl div strong {
+  font-size: 1.2em;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  text-transform: lowercase;
 }
 #flowers .fl span {
   background-color: rgba(0, 0, 0, 0.8);
