--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Monserrat|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans|Lato);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Century|Monserrat|Poiret+One|Great+Vibes|Corbel|La+Belle+Aurore|Cedarville+Cursive|Josefin+Slab|Josefin+Sans|Lato);
 
 $font-title: 'Great Vibes', 'La Belle Aurore', serif;
 $font-subtitle: 'Josefin Slab', serif;
@@ -6,6 +6,7 @@ $font-nav:  'Poiret One', 'Corbel', sans-serif;
 $font-body: 'Josefin Sans', 'Corbel', sans-serif;
 $font-flower: 'Montserrat', 'Open Sans', sans-serif;
 $font-color: 'Lato', 'Open Sans', 'Corbel', Helvetica, sans-serif;
+$font-serif: 'Century', Garamond, serif;
 
 $black: rgba(0, 0, 0, 0.8);
 $grey: rgba(0, 0, 0, 0.4);
