--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -199,7 +199,7 @@ nav {
 #intro {
   border: 0.2em double $black;
   font-family: $font-body;
-  font-size: 1.25em; 
+  font-size: 1.2em; 
   line-height: 1.5em;
   padding: 2em 4em;
   margin: 1em 4em 2em;
@@ -263,16 +263,24 @@ nav {
     span {
       background-color: $black;
       color: white;
+      cursor: pointer;
       display: block;
       font-family: $font-flower;
       font-size: 0.8em;
       font-weight: 500;
       letter-spacing: 0.08em;
       margin: -0.5em 0;
-      padding: 0.6em 0;
+      padding: 0.8em 0 0.6em;
       text-decoration: none;
       text-transform: uppercase;
+      @include transition(0.5s ease-in-out);
     } /* span */
+
+    span:hover {
+     background-color: $white;
+     color: $black;
+     letter-spacing: 0.18em;
+    } /* span:hover */
 
     img {
       padding: 0 auto;
@@ -280,4 +288,5 @@ nav {
       width: 12em;
     } /* img */
   } /* .fl */
+
 }
