--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,3 +12,6 @@ $black: rgba(0, 0, 0, 0.8);
 $grey: rgba(0, 0, 0, 0.4);
 $white: rgba(255, 255, 255, 0.9);
 $green: rgba(116, 113, 78, 1);
+
+$transwhite: rgba(255, 255, 255, 0.5);
+$transblack: rgba(0, 0, 0, 0.5);
