--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import 'compass';
 @import 'compass/reset';
+@import 'susy';
+@import 'grids';
 @import 'variables';
 @import 'mixins';
 @import 'base';
