--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -12,8 +12,8 @@ footer {
   font-family: $font-subtitle;
   margin-top: 5em;
   position: relative;
-  width: 100%;
-
+  @include span(12);
+  
   #contact {
     padding: 0.8em;
     #title {
@@ -31,7 +31,6 @@ footer {
     background-color: $black;
     padding: 0.8em;
     text-align: center;
-    width: 100%;
   }
 }
 
@@ -53,8 +52,8 @@ header {
 
 main {
   section {
+    @include span(12);
     display: inline;
-    margin: 3em 3.5em 0;
     
     .ad {
       float: right;
@@ -84,8 +83,7 @@ main {
 nav {
   background-color: $black;
   text-align: center;
-  
-  width: 100%;
+  @include span(12);
   a {
     color: $white;
     display: inline-block;
@@ -189,6 +187,7 @@ nav {
   margin: 3em auto;
   text-align: justify;
   overflow: hidden;
+  width: 75%;
 }
 
 .hide {
@@ -206,8 +205,8 @@ nav {
 }
 
 #flowers {
-  @include span(10);
-  @include push(1);
+  @include gallery(12);
+  margin: 0 auto;
   text-align: center;
 
   .fl {
@@ -289,5 +288,17 @@ nav {
       width: 12em;
     } /* img */
   } /* .fl */
-
 }
+
+/* Media Query Stuff */
+@include susy-breakpoint($small) {
+  #flower {
+    @include span(12);
+  }
+} // small
+
+@include susy-breakpoint($medium) {
+  #flower {
+    @include span(12);
+  }
+} // medium
